--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "studynodejs",
   "version": "1.0.0",
   "description": "new nodejs",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,10 @@
   },
   "homepage": "https://github.com/taikudo123awe/nodejs-study#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-handlebars": "^8.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
